--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   backend:
     build:
@@ -9,7 +7,9 @@ services:
     volumes:
       - ./backend:/usr/src/app
     env_file:
-      - ./backend/.env
+      - ./.env
+    networks:
+      - app-network
     depends_on:
       - db
 
@@ -21,21 +21,29 @@ services:
     volumes:
       - ./frontend:/usr/src/app
     env_file:
-      - ./frontend/.env
+      - ./.env
     environment:
-      - CHOKIDAR_USEPOLLING=true
+      # Pass the backend URL as an environment variable
+      REACT_APP_BACKEND_API_URL: ${BACKEND_API_URL}  # Use the project-level variable
+    networks:
+      - app-network
     depends_on:
       - backend
-
   db:
     image: postgres:13-alpine
     ports:
       - "${DB_PORT}:${DB_PORT}"
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      #POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     env_file:
-      - ./db/.env
-    environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - ./.env
+    networks:
+      - app-network
+networks:
+  app-network:
+    driver: bridge
