--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
